# cmd/main.go
@@ -42,23 +42,23 @@ func mockServer() {
 	testRouter := gin.Default()
 
 	testRouter.GET("/info", func(c *gin.Context) {
-		artistName := c.Query("artist")
-		songTitle := c.Query("title")
+		groupName := c.Query("group")
+		songTitle := c.Query("song")
 
-		if artistName == "" || songTitle == "" {
-			logger.Debug("artist or title is empty")
+		if groupName == "" || songTitle == "" {
+			logger.Debug("group or song is empty")
 			c.JSON(http.StatusBadRequest, gin.H{"error": "missing parameters"})
 			return
 		}
 
-		songDetail, err := controllers.GetSongDetailJSON(artistName, songTitle)
+		songDetail, err := controllers.GetSongDetailJSON(groupName, songTitle)
 		if err != nil {
 			logger.Debug("get song detail fail", err)
 			c.JSON(http.StatusNotFound, gin.H{"error": "song not found"})
 			return
 		}
 
-		logger.Info("request to info succeeded", slog.Any("artist", artistName), slog.Any("title", songTitle))
+		logger.Info("request to info succeeded", slog.Any("group", groupName), slog.Any("song", songTitle))
 		c.JSON(http.StatusOK, songDetail)
 	})
 
