# internal/models/song.go
@@ -4,10 +4,10 @@ import (
 	"time"
 )
 
-type Artist struct {
+type Group struct {
 	ID        uint       `gorm:"primaryKey" json:"id"`
 	Name      string     `json:"name" gorm:"unique;index"`
-	Songs     []Song     `json:"songs,omitempty" gorm:"foreignKey:ArtistID"`
+	Songs     []Song     `json:"songs,omitempty" gorm:"foreignKey:GroupId"`
 	CreatedAt time.Time  `json:"created_at"`
 	UpdatedAt time.Time  `json:"updated_at"`
 	DeletedAt *time.Time `gorm:"index" json:"deleted_at,omitempty"`
@@ -15,7 +15,8 @@ type Artist struct {
 
 type Song struct {
 	ID          uint       `gorm:"primaryKey" json:"id"`
-	ArtistID    uint       `json:"artist_id" gorm:"index"`
+	GroupId     uint       `json:"group_id" gorm:"index"`
+	GroupName   string     `json:"group_name" gorm:"index"`
 	Title       string     `json:"song"`
 	ReleaseDate time.Time  `json:"release_date"`
 	Text        string     `json:"text"`
@@ -26,6 +27,8 @@ type Song struct {
 }
 
 type SongDetail struct {
+	GroupName   string `json:"group_name"`
+	SongName    string `json:"song_name"`
 	ReleaseDate string `json:"release_date"`
 	Text        string `json:"text"`
 	Link        string `json:"link"`
@@ -37,8 +40,9 @@ type AddNewSong struct {
 }
 
 type SongUpdate struct {
-	Title       *string    `json:"song,omitempty"`
-	ReleaseDate *time.Time `json:"release_date,omitempty"`
-	Text        *string    `json:"text,omitempty"`
-	Link        *string    `json:"link,omitempty"`
+	GroupName   *string `json:"group_name"`
+	Song        *string `json:"song,omitempty"`
+	ReleaseDate *string `json:"release_date,omitempty"`
+	Text        *string `json:"text,omitempty"`
+	Link        *string `json:"link,omitempty"`
 }
